plugins {
    id 'fabric-loom' version '1.11-SNAPSHOT'
    id 'maven-publish'
}

version = System.getenv("GITHUB_REF")?.replace("refs/tags/", "") ?: "dev"
group = "io.github.itsfelix5"

base {
    archivesName = "Stfu"
}

repositories {
    maven {
        url = 'https://maven.isxander.dev/releases'
    }
    maven {
        url = "https://maven.terraformersmc.com/"
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.minecraft_version}+build.${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:+"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}-fabric"
    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
}

processResources {
    inputs.property "version", project.version
    filteringCharset = "UTF-8"

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

loom {
    accessWidenerPath = file("src/main/resources/stfu.accesswidener")
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release.set(17)
}

java {
    if (JavaVersion.current() < JavaVersion.toVersion(17)) toolchain.languageVersion = JavaLanguageVersion.of(17)
}

jar {
    from("LICENSE") {
        rename { "${it}_Stfu" }
    }
}

publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = "Stfu"
            from components.java
        }
    }
}